Twitter'dan alınan tweetlerin scoreları belirlendi. Backend senaryoları gerçekleştirildi. Query time 15-22 saniye sürmekte optimizasyon gerekiyor

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,7 +36,7 @@ stock-market:
     reset-password: "/reset-password/"
   nodejs:
     twitter:
-      uri: "http://localhost:4321/"
+      uri: "https://ahmethuseyindok.com/api/twitter/"
       mock-service: "http://localhost:3409/mock/get-tweets"
   redis:
     docker:
